--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^16.0.1",
     "jsforce": "^1.11.0",
     "puppeteer": "^15.1.0",
-    "yaml": "^2.1.1"
+    "yaml": "^2.1.1",
+    "yargs": "^17.6.2"
   },
   "type": "module"
 }
